--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\35389\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\ohter\\AppData\\Roaming\\NetBeans\\15\\build.properties
